
include_directories(../ ./)
set(SOURCE 
    adaptive_fir_filter.cc
    adaptive_fir_filter.h
    adaptive_fir_filter_erl.cc
    adaptive_fir_filter_erl.h
    aec3_common.cc
    aec3_common.h
    aec3_fft.cc
    aec3_fft.h
    aec_state.cc
    aec_state.h
    alignment_mixer.cc
    alignment_mixer.h
    api_call_jitter_metrics.cc
    api_call_jitter_metrics.h
    block_buffer.cc
    block_buffer.h
    block_delay_buffer.cc
    block_delay_buffer.h
    block_framer.cc
    block_framer.h
    block_processor.cc
    block_processor.h
    block_processor_metrics.cc
    block_processor_metrics.h
    clockdrift_detector.cc
    clockdrift_detector.h
    comfort_noise_generator.cc
    comfort_noise_generator.h
    decimator.cc
    decimator.h
    delay_estimate.h
    dominant_nearend_detector.cc
    dominant_nearend_detector.h
    downsampled_render_buffer.cc
    downsampled_render_buffer.h
    echo_audibility.cc
    echo_audibility.h
    echo_canceller3.cc
    echo_canceller3.h
    echo_path_delay_estimator.cc
    echo_path_delay_estimator.h
    echo_path_variability.cc
    echo_path_variability.h
    echo_remover.cc
    echo_remover.h
    echo_remover_metrics.cc
    echo_remover_metrics.h
    erl_estimator.cc
    erl_estimator.h
    erle_estimator.cc
    erle_estimator.h
    fft_buffer.cc
    fft_buffer.h
    fft_data.h
    filter_analyzer.cc
    filter_analyzer.h
    frame_blocker.cc
    frame_blocker.h
    fullband_erle_estimator.cc
    fullband_erle_estimator.h
    main_filter_update_gain.cc
    main_filter_update_gain.h
    matched_filter.cc
    matched_filter.h
    matched_filter_lag_aggregator.cc
    matched_filter_lag_aggregator.h
    moving_average.cc
    moving_average.h
    nearend_detector.h
    render_buffer.cc
    render_buffer.h
    render_delay_buffer.cc
    render_delay_buffer.h
    render_delay_controller.cc
    render_delay_controller.h
    render_delay_controller_metrics.cc
    render_delay_controller_metrics.h
    render_signal_analyzer.cc
    render_signal_analyzer.h
    residual_echo_estimator.cc
    residual_echo_estimator.h
    reverb_decay_estimator.cc
    reverb_decay_estimator.h
    reverb_frequency_response.cc
    reverb_frequency_response.h
    reverb_model.cc
    reverb_model.h
    reverb_model_estimator.cc
    reverb_model_estimator.h
    shadow_filter_update_gain.cc
    shadow_filter_update_gain.h
    signal_dependent_erle_estimator.cc
    signal_dependent_erle_estimator.h
    spectrum_buffer.cc
    spectrum_buffer.h
    stationarity_estimator.cc
    stationarity_estimator.h
    subband_erle_estimator.cc
    subband_erle_estimator.h
    subband_nearend_detector.cc
    subband_nearend_detector.h
    subtractor.cc
    subtractor.h
    subtractor_output.cc
    subtractor_output.h
    subtractor_output_analyzer.cc
    subtractor_output_analyzer.h
    suppression_filter.cc
    suppression_filter.h
    suppression_gain.cc
    suppression_gain.h
    ../logging/apm_data_dumper.cc
    ../utility/ooura_fft.cc
    ../utility/ooura_fft_sse2.cc
    vector_math.h)
add_library(aec3 STATIC ${SOURCE})
target_link_libraries(aec3 base)
